<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/calendar_month"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/chat"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_anbefalinger"
        android:icon="@drawable/psychiatry"
        android:title="@string/title_anbefalinger" />

    <item
        android:id="@+id/navigation_prover"
        android:icon="@drawable/health_metrics"
        android:title="@string/title_resultater" />

</menu>