<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.din_helse.hjem"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_hjem" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.din_helse.Calendar"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.din_helse.chat"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_anbefalinger"
        android:name="com.example.din_helse.recommandations"
        android:label="@string/title_anbefalinger"
        tools:layout="@layout/fragment_recommandations" />
    <fragment
        android:id="@+id/navigation_prover"
        android:name="com.example.din_helse.test_results"
        android:label="@string/title_resultater"
        tools:layout="@layout/fragment_test_results" />

</navigation>